<resources>
    <string name="app_name">FriendlyJenkins</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Welcome</string>
    <string name="continueButton"><![CDATA[Continue >]]></string>
    <string name="server">Server</string>
    <string name="store_password">Store the password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_login_required">Please, specify login</string>
    <string name="error_server_required">Please, specify server</string>
</resources>
